syntax = "proto3";

package route;

import "card.proto";

option java_package = "com.wwttr.route";
option java_outer_classname = "Api";
option java_generic_services = true;

service RouteService {
  rpc AddDelta (Message) returns (Empty);
  // rpc GetRoute (GetRouteRequest) returns (Route);
  rpc ClaimRoute (ClaimRouteRequest) returns (ClaimRouteResponse);
  rpc StreamRoutes (StreamRoutesRequest) returns (stream Route);
  
}

message Empty {}

message Message {}

message Route {
  string id = 1;
  string first_city_id = 2;
  string second_city_id = 3;
  card.TrainColor color = 4;
  string player_id = 5;
  int32 length = 6;
  string game_id = 7;
}

message StreamRoutesRequest {
  string game_id = 1;
}

message ClaimRouteRequest {
  string route_id = 1;
  string player_id = 2;
  repeated string card_ids = 3;
}

message ClaimRouteResponse {
  
}
